--- a/.github/workflows/continuosintegration.yml
+++ b/.github/workflows/continuosintegration.yml
@@ -41,9 +41,9 @@ jobs:
               runs-on: ubuntu-latest
               steps:
               - uses: actions/checkout@v4
-              - name: Run Discord Webhook
+              - name: Discord Commits
                 uses: Sniddl/discord-commits@v1.6
                 with:
-                  webhook_url: ${{ secrets.CAPTAIN_HOOK_DISCORD }}
+                  webhook: ${{ secrets.CAPTAIN_HOOK_DISCORD }}
                   template: "avatar-with-link"
                   include-extras: true
