--- a/.github/workflows/continuosintegration.yml
+++ b/.github/workflows/continuosintegration.yml
@@ -38,7 +38,7 @@ jobs:
           tags: user/app:latest
 
   testes:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
